--- a/src/main/resources/templates/addItem.html
+++ b/src/main/resources/templates/addItem.html
@@ -29,6 +29,14 @@
                 <a class="nav-item nav-link" th:href="@{/all}">Все</a>
                 <a class="nav-item nav-link" th:href="@{/done}">Выполненные</a>
                 <a class="nav-item nav-link" th:href="@{/undone}">Новые</a>
+                <a class="nav-item nav-link" th:if="${user.name == 'Гость'}" th:href="@{/loginPage}">
+                    <span th:text="${user.name}"></span>
+                    <span> | Войти</span>
+                </a>
+                <a class="nav-item nav-link" th:if="${user.name != 'Гость'}" th:href="@{/logout}">
+                    <span th:text="${user.email}"></span>
+                    <span> | Выйти</span>
+                </a>
             </div>
         </div>
     </nav>
@@ -44,6 +52,7 @@
                         <label for="description">Описание</label>
                         <input type="text" class="form-control" name="description" id="description">
                     </div>
+                    <input type="hidden" name="user.id" th:value="${user.id}"/>
                     <button type="submit" class="btn btn-primary">Сохранить</button>
                 </form>
             </div>
