--- a/src/main/resources/templates/userRegistrationFail.html
+++ b/src/main/resources/templates/userRegistrationFail.html
@@ -14,6 +14,7 @@
             integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
             integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>Список задач</title>
 </head>
@@ -26,40 +27,18 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link" th:href="@{/all}">Все</a>
-                <a class="nav-item nav-link" th:href="@{/done}">Выполненные</a>
-                <a class="nav-item nav-link" th:href="@{/undone}">Новые</a>
-                <a class="nav-item nav-link" th:if="${user.name == 'Гость'}" th:href="@{/loginPage}">
-                    <span th:text="${user.name}"></span>
-                    <span> | Войти</span>
-                </a>
-                <a class="nav-item nav-link" th:if="${user.name != 'Гость'}" th:href="@{/logout}">
-                    <span th:text="${user.email}"></span>
-                    <span> | Выйти</span>
-                </a>
+                <a class="nav-item nav-link" th:href="@{/registration}">Регистрация</a>
+                <a class="nav-item nav-link" th:href="@{/loginPage}">Войти</a>
             </div>
         </div>
     </nav>
     <div class="row pt-3">
         <div class="card" style="width: 100%">
             <div class="card-header">
-                Редактирование.
-            </div>
-            <div class="card-body">
-                <form th:action="@{/edit}" method="POST" th:object="${item}">
-                    <input type="hidden" name="id" th:field="*{id}"/>
-                    <div class="form-group">
-                        <label for="description">Описание</label>
-                        <input type="text" class="form-control" name="description" id="description" th:field="*{description}">
-                    </div>
-                    <input type="hidden" name="created" th:field="*{created}"/>
-                    <input type="hidden" name="done" th:field="*{done}"/>
-                    <button type="submit" class="btn btn-primary">Сохранить</button>
-                </form>
+                Пользователь с таким именем уже существует!
             </div>
         </div>
     </div>
-</div>
 </div>
 </body>
 </html>
