--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -39,6 +39,9 @@
             </div>
             <div class="card-body">
                 <form th:action="@{/registration}" method="POST">
+                    <div th:if="${fail}" class="alert alert-danger" role="alert">
+                        Пользователь с такой почтой уже зарегистрирован! Введите другу почту.
+                    </div>
                     <input type="hidden" name="id" value="0"/>
                     <div class="form-group">
                         <label for="name">Имя</label>
