4. Категории в TODO List [#331991]

--- a/src/main/resources/templates/addItem.html
+++ b/src/main/resources/templates/addItem.html
@@ -52,6 +52,14 @@
                         <label for="description">Описание</label>
                         <input type="text" class="form-control" name="description" id="description">
                     </div>
+                    <div class="form-group">
+                        <label for="category.id">Категории</label>
+                        <select class="form-control" id="category.id" name="categoriesId" multiple="multiple">
+                            <option th:each="category : ${categories}"
+                                    th:value="${category.id}"
+                                    th:text="${category.name}"></option>
+                        </select>
+                    </div>
                     <input type="hidden" name="user.id" th:value="${user.id}"/>
                     <button type="submit" class="btn btn-primary">Сохранить</button>
                 </form>
